--- a/app/src/main/res/layout/activity_esqueci_senha.xml
+++ b/app/src/main/res/layout/activity_esqueci_senha.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Celular cadastrado  "
+            android:hint="E-mail cadastrado  "
             android:inputType="number" />
 
         <Button
